--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -77,6 +77,7 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
         env:
           NEXT_PRIVATE_LOCAL_WEBPACK: true
+          PRODUCTION_PATH: https://victoriaman.github.io/admin-pages-router
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
